--- a/src/BankAccount.Api/appsettings.Development.json
+++ b/src/BankAccount.Api/appsettings.Development.json
@@ -2,8 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning",
-      "Npgsql.Command": "None"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "ConnectionStrings": {
